# AMDMIGraphX

./: CMakeLists.txt  Dockerfile  Jenkinsfile  dev-requirements.txt  requirements.txt
cmake/: EnableCompilerWarnings.cmake
doc/html/: .buildinfo  cpp_user_guide.html  developer_guide.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  py_user_guide.html  search.html  searchindex.js  user_guide.html
doc/html/dev/: matchers.html
doc/html/reference/: data.html  operators.html  pass.html  program.html  py.html  quantization.html  targets.html
src/: CMakeLists.txt  auto_contiguous.cpp  common_subexpression_elimination.cpp  decompose.cpp  eliminate_concat.cpp  eliminate_contiguous.cpp  instruction.cpp  memory_coloring2.cpp  program.cpp  propagate_copy.cpp  quantization.cpp  rewrite_batchnorm.cpp  schedule.cpp  shape.cpp  simplify_add.cpp  simplify_algebra.cpp  simplify_reshapes.cpp  to_shapes.cpp
src/api/: api.cpp  migraphx.py
src/api/include/migraphx/: migraphx.h  migraphx.hpp
src/cpugen/: CMakeLists.txt  main.cpp
src/driver/: main.cpp
src/include/migraph/: context.hpp  functional.hpp  instruction.hpp  literal.hpp  memory_coloring2.hpp  operators.hpp  pass_config.hpp  pre_scheduling.hpp  program.hpp  ranges.hpp  simplify_add.hpp  verify_args.hpp
src/include/migraphx/: config.hpp  context.hpp  generate.hpp  instruction.hpp  literal.hpp  make_shared_array.hpp  matcher.hpp  memory_coloring.hpp  memory_coloring2.hpp  onnx.hpp  operation.hpp  operators.hpp  pass_config.hpp  pre_scheduling.hpp  program.hpp  propagate_copy.hpp  quantization.hpp  ranges.hpp  time.hpp  to_shapes.hpp  verify_args.hpp
src/include/migraphx/op/: abnormal_ops.hpp  abs.hpp  acos.hpp  add.hpp  argmax.hpp  argmin.hpp  as_shape.hpp  asin.hpp  atan.hpp  batch_norm.hpp  binary.hpp  broadcast.hpp  capture.hpp  clip.hpp  common.hpp  concat.hpp  const_of_shape.hpp  contiguous.hpp  convert.hpp  convolution.hpp  cos.hpp  cosh.hpp  div.hpp  dot.hpp  elu.hpp  exp.hpp  flatten.hpp  gather.hpp  gru.hpp  hard_sigmoid.hpp  identity.hpp  im2col.hpp  leaky_relu.hpp  load.hpp  log.hpp  logsoftmax.hpp  lrn.hpp  lstm.hpp  max.hpp  min.hpp  (+37 more)
src/onnx/: CMakeLists.txt  onnx.cpp  perf_onnx.cpp  read_onnx.cpp  verify_onnx.cpp
src/opt/: common_header.hpp  dom_info.cpp  dom_info.hpp  horizontal_fusion_impl.cpp  horizontal_fusion_impl.hpp  memory_coloring.cpp  memory_coloring_impl.cpp  memory_coloring_impl.hpp  pre_scheduling.cpp  pre_scheduling_impl.cpp  pre_scheduling_impl.hpp  set_operator.hpp
src/py/: migraphx_py.cpp
src/targets/cpu/: CMakeLists.txt  cpu_lowering.cpp  lowering.cpp
src/targets/cpu/include/migraph/cpu/: context.hpp
src/targets/cpu/include/migraphx/cpu/: context.hpp
src/targets/gpu/: CMakeLists.txt  add.cpp  batchnorm.cpp  concat.cpp  convolution.cpp  fuse_ops.cpp  gemm.cpp  hip.cpp  legalize.cpp  lowering.cpp  lowering_memory_coloring.cpp  onehot.cpp  pad.cpp  pooling.cpp  quant_convolution.cpp  quant_gemm.cpp  relu.cpp  schedule_model.cpp  softmax.cpp  split.cpp  target.cpp  write_literals.cpp
src/targets/gpu/device/: add.cpp  add_clip.cpp  add_relu.cpp  add_sigmoid.cpp  add_sqrt.cpp  add_tanh.cpp  argmax.cpp  argmin.cpp  bert.cpp  clip.cpp  concat.cpp  convert.cpp  erf_factor.cpp  gather.cpp  (+22 more)
src/tf/: CMakeLists.txt  tf.cpp
test/: cpu_ops_test.cpp  memory_coloring2_test.cpp  print_graph_test.cpp  propagate_copy_test.cpp  schedule_test.cpp
test/api/: test_cpu.cpp
test/gpu/: miopen.cpp  ops_test.cpp
test/onnx/: crm_var_len.onnx  gen_onnx.py  implicit_add_bcast_var_len_test.onnx  onnx_test.cpp
test/tf/: tf_test.cpp
tools/api/: api.cpp
tools/include/: context.hpp  operation.hpp
(+56 files in other folders)
